samples/_failures_safe/1761452898_ab61ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74c7fba1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_74c7fba1.c:163:24: error: expected ‘;’ at end of input
  163 |         skip_whitespace
      |                        ^
      |                        ;
./samples/SAFE/__tmp_74c7fba1.c:163:9: error: expected declaration or statement at end of input
  163 |         skip_whitespace
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_74c7fba1.c:163:9: error: expected declaration or statement at end of input
